# cell-ellipse-patterns

./: .gitmodules  CMakeLists.txt  GayBernePotential.cpp  GayBernePotential.h  cell_pattern.cpp  test.py  three_configs.py
